# nf-interpreter

./: CMakePresets.json
targets/FreeRTOS/RASPI/lib/: CMakeLists.txt
targets/FreeRTOS/RASPI/lib/TARGET_RASPBERRY_PI_PICO/: board.c
targets/FreeRTOS/RASPI/lib/pico-sdk/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/boot_picoboot/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/boot_uf2/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_base/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_binary_info/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_bit_ops/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_divider/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_stdlib/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_sync/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_time/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/common/pico_util/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2040/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2040/hardware_regs/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2040/hardware_structs/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/cmsis/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_base/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_flash/: Makefile  cmake_install.cmake  flash.c
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_rtc/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_spi/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_sync/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_timer/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_uart/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_vreg/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_watchdog/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/hardware_xosc/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_bit_ops/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_bootrom/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_bootsel_via_double_reset/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_cxx_options/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_divider/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_double/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_fix/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_float/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_int64_ops/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_malloc/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_mem_ops/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_multicore/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_platform/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_printf/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_runtime/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_standard_link/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_stdio/: Makefile  cmake_install.cmake
targets/FreeRTOS/RASPI/lib/pico-sdk/rp2_common/pico_stdio_semihosting/: Makefile  (+1 more)
targets/FreeRTOS/RASPI/lib/tinyusb/: CMakeLists.txt
targets/FreeRTOS/RASPI/lib/usb_descriptor/: nano_usb_descriptors.c
(+123 files in other folders)
